; ModuleID = '/home/carl/AnghaBench/beanstalkd/extr_testjobs.c_cttest_job_cmp_ids.c'
source_filename = "/home/carl/AnghaBench/beanstalkd/extr_testjobs.c_cttest_job_cmp_ids.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 }

@default_tube = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"default\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"should be less\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cttest_job_cmp_ids() #0 {
  %1 = alloca %struct.TYPE_7__*, align 8
  %2 = alloca %struct.TYPE_7__*, align 8
  %3 = load i32, i32* @default_tube, align 4
  %4 = call i32 @make_tube(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %5 = call i32 @TUBE_ASSIGN(i32 %3, i32 %4)
  %6 = load i32, i32* @default_tube, align 4
  %7 = call %struct.TYPE_7__* @make_job(i32 1, i32 0, i32 1, i32 0, i32 %6)
  store %struct.TYPE_7__* %7, %struct.TYPE_7__** %1, align 8
  %8 = load i32, i32* @default_tube, align 4
  %9 = call %struct.TYPE_7__* @make_job(i32 1, i32 0, i32 1, i32 0, i32 %8)
  store %struct.TYPE_7__* %9, %struct.TYPE_7__** %2, align 8
  %10 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = shl i32 %13, 49
  store i32 %14, i32* %12, align 4
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %1, align 8
  %16 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %17 = call i32 @job_pri_less(%struct.TYPE_7__* %15, %struct.TYPE_7__* %16)
  %18 = call i32 @assertf(i32 %17, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local i32 @TUBE_ASSIGN(i32, i32) #1

declare dso_local i32 @make_tube(i8*) #1

declare dso_local %struct.TYPE_7__* @make_job(i32, i32, i32, i32, i32) #1

declare dso_local i32 @assertf(i32, i8*) #1

declare dso_local i32 @job_pri_less(%struct.TYPE_7__*, %struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
